Bug 556114 crash [@ activateWindow] r=neil,sr=Standard8